<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".sign_in_up.SignUp">
    <ProgressBar
        android:id="@+id/SignUp_proressBar"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"
        />

    <ScrollView
        android:id="@+id/SignUp_Scrolliew"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/SignUp_email_edittext"
                    android:inputType="textEmailAddress"
                    style="@style/EditTextStyle"
                    android:layout_width="260dp"
                    android:hint="Email"
                    android:maxLines="1" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Location"
                    android:layout_gravity="center_horizontal"

                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
                <Spinner
                    android:id="@+id/SignUp_location_Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@color/colorSilver"
                    >
                </Spinner>
                <EditText

                    android:id="@+id/SignUp_city_edittext"
                    android:inputType="textEmailAddress"
                    style="@style/EditTextStyle"
                    android:layout_width="260dp"
                    android:hint="city"
                    android:layout_marginTop="10dp"
                    android:maxLines="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Birthday"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
                <Button
                    android:id="@+id/SignUp_birthday_Button"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="2019-01-01"
                    android:background="@color/colorSilver"
                    >
                </Button>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gender"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
                <Spinner
                    android:id="@+id/SignUp_gender_Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@color/colorSilver"
                    >
                </Spinner>

                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/SignUp_firstName_edittext"
                        style="@style/EditTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:hint="First Name"
                        android:maxLines="1" />

                    <EditText
                        android:id="@+id/SignUp_lastName_edittext"
                        style="@style/EditTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:hint="Last Name"
                        android:maxLines="1" />

                </LinearLayout>

                <EditText
                    android:id="@+id/SignUp_Pass_edittext"
                    style="@style/EditTextStyle"
                    android:layout_width="260dp"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/SignUp_rePass_edittext"
                    style="@style/EditTextStyle"
                    android:layout_width="260dp"
                    android:hint="Re-enter Password"
                    android:inputType="textPassword"
                    android:maxLines="1" />

                <Button
                    android:id="@+id/SignUp_signUp_btn"
                    style="@style/Button"
                    android:background="@drawable/button_rounded_corners_brownish"
                    android:text="Sign Up" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
    <ProgressBar
        android:id="@+id/SignUP_loading_ProgBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>